2011-04-14  Andy Estes  <aestes@apple.com>

        Reviewed by Dan Bernstein.

        REGRESSION (r72141): Acid3 rendering is not pixel perfect.
        https://bugs.webkit.org/show_bug.cgi?id=55734
        
        WebCore should render text with a 0px font size at 0px regardless of
        minimum font size settings. This is compatible with other browsers that
        have a minimum font size preference and ensures pixel-perfect rendering
        on Acid3.

        Test: fast/text/zero-font-size.html

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::getComputedSizeFromSpecifiedSize): If
        specifiedSize is 0, return specified size regardless of zoom factor or
        minimum font size.

2011-04-14  Matthew Delaney  <mdelaney@apple.com>

        Reviewed by Simon Fraser.

        Have canvas drawImageFromRect just redirect to use drawImage
        https://bugs.webkit.org/show_bug.cgi?id=58516

        Test: fast/canvas/drawImageFromRect_withToDataURLAsSource.html

        * html/canvas/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::drawImage):
        (WebCore::CanvasRenderingContext2D::drawImageFromRect):
        * html/canvas/CanvasRenderingContext2D.h:

2011-04-14  James Robinson  <jamesr@chromium.org>

        Reviewed by Simon Fraser.

        REGRESSION (r83820): Lots of compositing tests failing on Windows 7 Release (Tests)
        https://bugs.webkit.org/show_bug.cgi?id=58535

        Change PLATFORM(MAC) guards to !PLATFORM(CHROMIUM) so they apply correctly to the windows build.

        * rendering/RenderLayerBacking.cpp:
        (WebCore::RenderLayerBacking::requiresHorizontalScrollbarLayer):
        (WebCore::RenderLayerBacking::requiresVerticalScrollbarLayer):
        (WebCore::RenderLayerBacking::requiresScrollCornerLayer):
        * rendering/RenderLayerCompositor.cpp:
        (WebCore::shouldCompositeOverflowControls):

2011-04-14  Jian Li  <jianli@chromium.org>
