@@ -45,7 +45,7 @@ namespace WebCore {
 static int computeNumTiles(int maxTextureSize, int totalSize, int borderTexels)
 {
     if (maxTextureSize - 2 * borderTexels <= 0)
-        return 0;
+        return totalSize > 0 && maxTextureSize >= totalSize ? 1 : 0;
 
     int numTiles = max(1, 1 + (totalSize - 1 - 2 * borderTexels) / (maxTextureSize - 2 * borderTexels));
     return totalSize > 0 ? numTiles : 0;
