@@ -1,3 +1,13 @@
+2011-04-14  Adrienne Walker  <enne@google.com>
+
+        Reviewed by James Robinson.
+
+        [chromium] TilingData should return 1 tile when tile size is texture size.
+        https://bugs.webkit.org/show_bug.cgi?id=58364
+
+        * platform/graphics/gpu/TilingData.cpp:
+        (WebCore::computeNumTiles):
+
 2011-04-14  Andy Estes  <aestes@apple.com>
 
         Reviewed by Dan Bernstein.
